[package]
name = "survival"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo-console = "0.2.1"
gloo-timers = "0.2.4"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
priority-queue = "1.2.2"
wasm-bindgen = "0.2.81"
anyhow = "1.0.58"

[dependencies.web-sys]
version = "0.3.58"
features = [
    "Window",
    "KeyboardEvent"
]